--- a/ml_model/templates/index.html
+++ b/ml_model/templates/index.html
@@ -35,7 +35,7 @@ nav a:not(:last-child)::after {
     content: ">"; /* Unicode hex for a right arrow (→) */
     margin-left: 10px; /* Add space between text and arrow */
 }
-nav a[href="http://127.0.0.1:5000/"] {
+nav a[href="index.html"] {
     color: red;
     font-weight: bold;
     /* Add any other styling you want */
@@ -114,7 +114,7 @@ input[type="submit"]:hover {
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="http://127.0.0.1:5000/">Input Form</a>
+            <a href="index.html">Input Form</a>
         </nav>
     </header>
     <div class="main_content">
