--- a/ml_model/templates/result.html
+++ b/ml_model/templates/result.html
@@ -32,7 +32,7 @@
             content: ">";
             margin-left: 10px; 
         }
-        nav a[href="http://127.0.0.1:5000/submit"] {
+        nav a[href="result.html"] {
             color: red;
             font-weight: bold;
         }
@@ -56,8 +56,8 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="http://127.0.0.1:5000/">Input Form</a>
-            <a href="http://127.0.0.1:5000/submit">Filtered Projects</a>
+            <a href="index.html">Input Form</a>
+            <a href="result.html">Filtered Projects</a>
         </nav>
     </header>
     <div class="main_content">
